[gd_scene load_steps=5 format=3 uid="uid://bnuvp86homm2k"]

[ext_resource type="Script" path="res://scenes/void.gd" id="1_agfnk"]
[ext_resource type="PackedScene" uid="uid://ddpv1s64dship" path="res://scenes/enemy/enemy_submissive.tscn" id="2_77nbj"]
[ext_resource type="PackedScene" uid="uid://bs1uj0n2uiliy" path="res://scenes/player/player_dom.tscn" id="2_ylsfp"]

[sub_resource type="Curve2D" id="Curve2D_7q6r6"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -680, -392, 0, 0, 0, 0, 696, -392, 0, 0, 0, 0, 696, 408, 0, 0, 0, 0, -680, 408, 0, 0, 0, 0, -680, -392)
}
point_count = 5

[node name="Void" type="Node"]
script = ExtResource("1_agfnk")
mob_scene = ExtResource("2_77nbj")

[node name="Player_Dom" parent="." instance=ExtResource("2_ylsfp")]
damage_taken = 5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Startposition" type="Marker2D" parent="."]
position = Vector2(635, 361)

[node name="Polygon2D" type="Polygon2D" parent="."]
z_index = -100
position = Vector2(784, 304)
polygon = PackedVector2Array(-61, -46, -56, 78, 99, 87, 71, -63)

[node name="MobPath" type="Path2D" parent="."]
modulate = Color(0.431373, 0.341176, 0, 1)
position = Vector2(-8, -8)
curve = SubResource("Curve2D_7q6r6")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(-680, -392)
rotates = false

[node name="MobTimer" type="Timer" parent="."]

[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
